# python-core-devops

./: README.md
.devcontainer/: .gitignore  Dockerfile  README.md  devcontainer.json
framework_core/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pipeline.yaml  pyproject.toml  setup.py
framework_core/core/config/: configmanager.py
framework_core/core/database/: azureaisearch.py  azuretablestorage.py
framework_core/core/logging/: opentelemetrylogger.py
framework_core/core/secrets/: keyvaultmanager.py
framework_core/core/utils/: dateutils.py  stringutils.py
framework_core/tests/config/: test_configmanager.py
framework_core/tests/database/: test_azuretablestorage.py
framework_core/tests/utils/: test_dateutils.py  test_stringutils.py
src_developer/: .gitignore  .history  .pre-commit-config.yaml  MANIFEST.in  README.md  azure-pipelines.yaml  pyproject.toml
src_developer/scripts/: run_app.py
src_developer/src/app/: config.py  main.py
src_developer/tests/unit/: test_app.py
